--- a/accommodation.html
+++ b/accommodation.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: ICEPR'18 - Accommodation
+title: ICEPR'19 - Accommodation
 meta: The list of hotels for ICEPR
 keyword: environment conference, biofuels conference, desalination conference, wastewater conference, pollution conference, remediation conference, environmental engineering conference, environmental pollution conference, environmental remediation conference, environmental treatment conference, air pollution conference, water pollution conference, wasterwater pollution conference, soil pollution conference, environmental protection, environmental sustainability, environmental development, greenhouse, global warming, climate change, groudwater, oil spills, renewable energy, water treatment, soil treatment, wastewater treatment, environment, biofuels, desalination, wastewater, pollution, remediation, environmental engineering, environmental pollution, environmental remediation, environmental treatment, air pollution, water pollution, wasterwater pollution, soil pollution, environmental protection conference, environmental sustainability conference, environmental development conference, greenhouse conference, global warming conference, climate change conference, groudwater conference, oil spills conference, renewable energy conference, water treatment conference, soil treatment conference, wastewater treatment conference
 ---
@@ -8,10 +8,10 @@ keyword: environment conference, biofuels conference, desalination conference, w
 <a id="top"></a>
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-  <!-- <p class="body">We will provide a list of nearby accommodations to the venue soon! Thank you for your patience.</p> -->
-  <p class="body"><strong>We are pleased to announce that the 8<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'18) will be held at the Novotel Madrid Center.</strong> <!-- More importantly, we have collaborated with the hotel to offer our customers a reduced rate on the accommodations! Please click here for more information: Novotel Madrid Center. --></p>
+   <p class="body">We will provide a list of nearby accommodations to the venue soon! Thank you for your patience.</p> 
+   <!-- <p class="body"><strong>We are pleased to announce that the 9<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'19) will be held at the Novotel Madrid Center.</strong> More importantly, we have collaborated with the hotel to offer our customers a reduced rate on the accommodations! Please click here for more information: Novotel Madrid Center.</p>
 
-    <p class="body">A list of hotels within the walking distance from the conference venue is available below. <i>Please note that the reservations must be made individually directly by either phone or online at a specific hotel.</i> We suggest to make your reservations as early as possible to get the best discount and to avoid any toursit rush.</p>
+  <p class="body">A list of hotels within the walking distance from the conference venue is available below. <i>Please note that the reservations must be made individually directly by either phone or online at a specific hotel.</i> We suggest to make your reservations as early as possible to get the best discount and to avoid any toursit rush.</p>
 
 <table class="accommodation">
   <thead>
@@ -267,6 +267,6 @@ keyword: environment conference, biofuels conference, desalination conference, w
 <a href="https://www.petitpalacepuertadelsol.com/" class="body-link" target="_blank">www.petitpalacepuertadelsol.com</a>
 
 <a href="#top" class="top">TOP</a>
-</div>
+</div>-->
   </div>
   </div>
