--- a/committee.html
+++ b/committee.html
@@ -1,21 +1,21 @@
 ---
 layout: default
-title: ICEPR'18 - Scientific Committee
+title: ICEPR'19 - Scientific Committee
 meta: The scientific committee members of ICEPR
 keyword: environment conference, biofuels conference, desalination conference, wastewater conference, pollution conference, remediation conference, environmental engineering conference, environmental pollution conference, environmental remediation conference, environmental treatment conference, air pollution conference, water pollution conference, wasterwater pollution conference, soil pollution conference, environmental protection, environmental sustainability, environmental development, greenhouse, global warming, climate change, groudwater, oil spills, renewable energy, water treatment, soil treatment, wastewater treatment, environment, biofuels, desalination, wastewater, pollution, remediation, environmental engineering, environmental pollution, environmental remediation, environmental treatment, air pollution, water pollution, wasterwater pollution, soil pollution, environmental protection conference, environmental sustainability conference, environmental development conference, greenhouse conference, global warming conference, climate change conference, groudwater conference, oil spills conference, renewable energy conference, water treatment conference, soil treatment conference, wastewater treatment conference
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-    <!-- <p class="body">The Scientific Committee list is currently being updated. We appreciate your patience!</p> -->
+    <p class="body">The Scientific Committee list is currently being updated. We appreciate your patience!</p>
 
-    <p class="bold">Scientific Committee Members:</p><br>
+    <!--<p class="bold">Scientific Committee Members:</p><br>-->
 
    
-    <p class="body"><b>Dr. Raid Amin, </b> University of West Florida, USA</p>
+    <!--<p class="body"><b>Dr. Raid Amin, </b> University of West Florida, USA</p>
     <p class="body"><b>Dr. Maria Averina, </b> University Hospital of North Norway</p>
-    <!-- <p class="body"><b>Dr. Rajasekhar Bala, </b> National University of Singapore, Singapore</p> -->
-    <p class="body"><b>Dr. Priscilla Boccia, </b> INAIL/DIT, Italy</p>
+-->    <!-- <p class="body"><b>Dr. Rajasekhar Bala, </b> National University of Singapore, Singapore</p> -->
+    <!--<p class="body"><b>Dr. Priscilla Boccia, </b> INAIL/DIT, Italy</p>
     <p class="body"><b>Dr. Jamal Chaouki, </b> École Polytechnique de Montreal, Canada</p>
     <p class="body"><b>Dr. Bor-Yann Chen, </b> National I-Lan University, Taiwan</p>
     <p class="body"><b>Dr. Chengci Chen, </b> Montana State University, USA</p>
@@ -24,27 +24,27 @@ keyword: environment conference, biofuels conference, desalination conference, w
     <p class="body"><b>Dr. Anton Ficai, </b> University Politehnica of Bucharest, Romania</p>
     <p class="body"><b>Dr. Elisabetta Franchi, </b> Eni S.p.A., Italy</p>
     <p class="body"><b>Dr. Dragos Gudovan, </b> University Politehnica of Bucharest, Romania</p>
-    <p class="body"><b>Dr. Masayuki Goto, </b> Wayo Women's University, Japan</p>
+    <p class="body"><b>Dr. Masayuki Goto, </b> Wayo Women's University, Japan</p>-->
     <!-- <p class="body"><b>Dr. Ferri Hassani, </b> McGill University, Canada</p> -->
-    <p class="body"><b>Dr. Woo Seung Kim, </b> Hanyang University, South Korea</p>
+   <!-- <p class="body"><b>Dr. Woo Seung Kim, </b> Hanyang University, South Korea</p>
     <p class="body"><b>Dr. Kathlyn Kirkwood, </b> University of Ottawa, Canada</p>
     <p class="body"><b>Dr. Akira Kondo, </b> Osaka University, Japan</p>
     <p class="body"><b>Dr. Bernie H. Kueper, </b> Queen’s University, Canada</p>
     <p class="body"><b>Dr. Charles Lee, </b> The University of Newcastle, Singapore</p>
     <p class="body"><b>Dr. Jianbing Li, </b> Univeristy of Northern British Columbia, Canada</p>
     <p class="body"><b>Dr. Chuxia Lin, </b> University of Salford, UK</p>
-    <p class="body"><b>Dr. Huguette Turgeon O'Brien, </b> Laval University, Canada</p>
+    <p class="body"><b>Dr. Huguette Turgeon O'Brien, </b> Laval University, Canada</p>-->
     <!-- <p class="body"><b>Dr. Kuang-Hui Peng, </b> National Taipei University of Technology, Taiwan</p> -->
-    <p class="body"><b>Dr. Tomasz Płociniczak, </b> University of Silesia, Poland</p>
+   <!-- <p class="body"><b>Dr. Tomasz Płociniczak, </b> University of Silesia, Poland</p>
     <p class="body"><b>Dr. Bertrand Pourrut, </b> Catholic University of Lille - Yncrea - ISA Lille, France</p>
-    <p class="body"><b>Dr. Corinne Rivasseau, </b> Commissariat à l’Energie Atomique et aux Energies Alternatives, France</p>
+    <p class="body"><b>Dr. Corinne Rivasseau, </b> Commissariat à l’Energie Atomique et aux Energies Alternatives, France</p>-->
     <!-- <p class="body"><b>Dr. Martin Romantschuk, </b> University of Helsinki, Finland</p> -->
-    <p class="body"><b>Dr. Nora Fung Yee Tam, </b> City University of Hong Kong, Hong Kong</p>
+  <!--  <p class="body"><b>Dr. Nora Fung Yee Tam, </b> City University of Hong Kong, Hong Kong</p>-->
     <!-- <p class="body"><b>Dr. Ron Thring, </b> Univeristy of Northern British Columbia, Canada</p> -->
-    <p class="body"><b>Dr. Marek Trojanowicz, </b> University of Warsaw, Poland</p>
+   <!-- <p class="body"><b>Dr. Marek Trojanowicz, </b> University of Warsaw, Poland</p>-->
     <!-- <p class="body"><b>Dr. Olcay Tünay, </b> Istanbul Technical University, Turkey</p> -->
     <!-- <p class="body"><b>Dr. Jing Wang, </b> Swiss Federal Institute of Technology Zurich, Switzerland</p> -->
-    <p class="body"><b>Dr. Chih-Huang Weng, </b> I-Shou University, Taiwan</p>
-    <p class="body"><b>Dr. Chunlong Zhang, </b> University of Houston-Clear Lake, USA</p>
+    <!--<p class="body"><b>Dr. Chih-Huang Weng, </b> I-Shou University, Taiwan</p>
+    <p class="body"><b>Dr. Chunlong Zhang, </b> University of Houston-Clear Lake, USA</p>-->
   </div>
   </div>
