--- a/dates.html
+++ b/dates.html
@@ -1,15 +1,15 @@
 ---
 layout: default
-title: ICEPR'18 - Important Dates
+title: ICEPR'19 - Important Dates
 meta: The important dates of ICEPR
 keyword: environment conference, biofuels conference, desalination conference, wastewater conference, pollution conference, remediation conference, environmental engineering conference, environmental pollution conference, environmental remediation conference, environmental treatment conference, air pollution conference, water pollution conference, wasterwater pollution conference, soil pollution conference, environmental protection, environmental sustainability, environmental development, greenhouse, global warming, climate change, groudwater, oil spills, renewable energy, water treatment, soil treatment, wastewater treatment, environment, biofuels, desalination, wastewater, pollution, remediation, environmental engineering, environmental pollution, environmental remediation, environmental treatment, air pollution, water pollution, wasterwater pollution, soil pollution, environmental protection conference, environmental sustainability conference, environmental development conference, greenhouse conference, global warming conference, climate change conference, groudwater conference, oil spills conference, renewable energy conference, water treatment conference, soil treatment conference, wastewater treatment conference
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-    <p class="body">The important dates and deadlines for the 8<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'18) are as follows:</p>
+    <p class="body">The important dates and deadlines for the 9<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'19) will be announced soon. We appreciate your patience!</p>
 
-<div class="mobile">
+<!--<div class="mobile">
     <table>
     <tr>
     <td class="date-title">Conference Dates</td>
@@ -18,36 +18,36 @@ keyword: environment conference, biofuels conference, desalination conference, w
         <td class="imp-date">August 19 - 21, 2018</td>
     </tr>
     <tr>
-    <td class="date-title">Paper Submission Deadline<!-- <br>
-        <strong>Final Extended Paper Submission Deadline</strong></ --><td>
+    <td class="date-title">Paper Submission Deadline <br>
+        <strong>Final Extended Paper Submission Deadline</strong><td>
     </tr>
     <tr>
-        <td class="imp-date">February 9, 2018<!-- <p class="body">
-            <strong>March 24, 2018</strong></p> --></td>
+        <td class="imp-date">February 9, 2018 <p class="body">
+            <strong>March 24, 2018</strong></p> </td>
     </tr>
     <tr>
-    <td class="date-title">Notification of Authors<!-- <br><strong>Final Extended Notification of Authors</strong> --></td>
+    <td class="date-title">Notification of Authors <br><strong>Final Extended Notification of Authors</strong> </td>
     </tr>
     <tr>
-    <td class="imp-date">March 1, 2018<!-- <p class="body"><strong>March 27, 2018</strong></p> --></td>
+    <td class="imp-date">March 1, 2018 <p class="body"><strong>March 27, 2018</strong></p> </td>
     </tr>
     <tr>
-    <td class="date-title">Final Version of Accepted Submissions Deadline<!-- <br><strong>Final Version of Accepted Submissions Deadline</strong> --></td>
+    <td class="date-title">Final Version of Accepted Submissions Deadline <br><strong>Final Version of Accepted Submissions Deadline</strong> </td>
     </tr>
     <tr>
-    <td class="imp-date">April 20, 2018<!-- <p class="body"><strong>April 20, 2018</strong></p> --></td>
+    <td class="imp-date">April 20, 2018 <p class="body"><strong>April 20, 2018</strong></p> </td>
     </tr>
     <tr>
     <td class="date-title" rowspan="3">Registration Deadline</td>
     </tr>
     <tr>
-    <td class="reg">Early Bird Registration<!-- <br>
-        <b>Final Extended Early Bird Registration --></b>
-        <p class="body">March 16, 2018<!-- <br>
-        <strong>April 7, 2018</strong> --></p></td>
+    <td class="reg">Early Bird Registration <br>
+        <b>Final Extended Early Bird Registration</b>
+        <p class="body">March 16, 2018 <br>
+        <strong>April 7, 2018</strong> </p></td>
     </tr>
     <tr>
-        <td class="reg">*Regular Registration<!-- <br><div class="past-text">Final Extended Regular Registration*</div> --> <p class="body">April 20, 2018<!-- <br><b>May 1, 2018</b> --></p></td>
+        <td class="reg">*Regular Registration <br><div class="past-text">Final Extended Regular Registration*</div>  <p class="body">April 20, 2018 <br><b>May 1, 2018</b> </p></td>
     </tr>
     <tr>
         <td class="reg">Late Registration <p class="body">After April 20, 2018</p></td>
@@ -62,23 +62,24 @@ keyword: environment conference, biofuels conference, desalination conference, w
     <td class="imp-date">August 19 - 21, 2018</td>
 </tr>
     <tr>
-    <td class="date-title">Paper Submission Deadline<!-- <br><div class="past-text">Final Extended Paper Submission Deadline</div> --></td>
-        <td class="imp-date">February 9, 2018<!-- <br><b>March 24, 2018</b> --></td>
+    <td class="date-title">Paper Submission Deadline <br><div class="past-text">Final Extended Paper Submission Deadline</div> </td>
+        <td class="imp-date">February 9, 2018 <br><b>March 24, 2018</b> </td>
     </tr>
     <tr>
-    <td class="date-title">Notification of Authors<!-- <br><div class="past-text">Final Extended Notification of Authors</div> --></td>
-    <td class="imp-date">March 1, 2018<!-- <br><b>March 27, 2018</b> --></td>
+    <td class="date-title">Notification of Authors <br><div class="past-text">Final Extended Notification of Authors</div> </td>
+    <td class="imp-date">March 1, 2018 <br><b>March 27, 2018</b></td>
 </tr>
     <tr>
-    <td class="date-title">Final Version of Accepted Submissions Deadline<!-- <br><div class="past-text">Final Version of Accepted Submissions Deadline --></td>
-    <td class="imp-date">April 20, 2018<!-- <Br><b>April 20, 2018</b> --></td>
+    <td class="date-title">Final Version of Accepted Submissions Deadline <br><div class="past-text">Final Version of Accepted Submissions Deadline </td>
+    <td class="imp-date">April 20, 2018<!-- <Br><b>April 20, 2018</b> </td>
 </tr>
 <tr>
     <th class="date-title" rowspan=3>Registration Deadline</th>
-    <td class="reg">Early Bird Registration<!-- <div class="past-text">Final Extended Early Bird Registration</div> --><p class="body">March 16, 2018<!-- <br><strong>April 7, 2018</strong> --></p></td>
+    <td class="reg">Early Bird Registration <div class="past-text">Final Extended Early Bird Registration</div> <p class="body">March 16, 2018 <br><strong>April 7, 2018</strong></p></td>
 </tr>
 <tr>
-    <td class="reg">*Regular Registration<!-- <br><div class="past-text">Final Extended Regular Registration*</div> --><p class="body">April 20, 2018<!-- <br><b>May 1, 2018</b> --></p></td>
+    <td class="reg">*Regular Registration <br><div class="past-text">Final Extended Regular Registration*</div> <p class="body">April 20, 2018 <br><b>May 1, 2018
+    </b></p></td>
 </tr>
 <tr>
         <td class="reg">Late Registration <br><p class="body">After April 20, 2018</p></td>
@@ -86,6 +87,6 @@ keyword: environment conference, biofuels conference, desalination conference, w
 </table>
 </div>
 
-<p class="body">*This is the deadline for the registration of Authors</p>
+<p class="body">*This is the deadline for the registration of Authors</p>-->
   </div>
   </div>
