--- a/keynote.html
+++ b/keynote.html
@@ -1,15 +1,15 @@
 ---
 layout: default
-title: ICEPR'18 - Keynote Speakers
+title: ICEPR'19 - Keynote Speakers
 meta: The keynote speakers of ICEPR
 keyword: environment conference, biofuels conference, desalination conference, wastewater conference, pollution conference, remediation conference, environmental engineering conference, environmental pollution conference, environmental remediation conference, environmental treatment conference, air pollution conference, water pollution conference, wasterwater pollution conference, soil pollution conference, environmental protection, environmental sustainability, environmental development, greenhouse, global warming, climate change, groudwater, oil spills, renewable energy, water treatment, soil treatment, wastewater treatment, environment, biofuels, desalination, wastewater, pollution, remediation, environmental engineering, environmental pollution, environmental remediation, environmental treatment, air pollution, water pollution, wasterwater pollution, soil pollution, environmental protection conference, environmental sustainability conference, environmental development conference, greenhouse conference, global warming conference, climate change conference, groudwater conference, oil spills conference, renewable energy conference, water treatment conference, soil treatment conference, wastewater treatment conference
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-    <!-- <p class="body">The keynote information for the 8<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'18) will be announced soon. We appreciate your patience!</p> -->
+     <p class="body">The keynote information for the 9<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'19) will be announced soon. We appreciate your patience!</p> 
 
-    <p class="body">We are very happy to announce the following keynote speaker for the 8<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'18):</p>
+   <!-- <p class="body">We are very happy to announce the following keynote speaker for the 9<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'19):</p>
 
     <div class="keynotes">
     <div class="unit unit-s-1-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
@@ -17,17 +17,17 @@ keyword: environment conference, biofuels conference, desalination conference, w
       <a href="#Dr. Jianbing Li">Dr. Jianbing Li</a><br> 
            <p class="body">Univeristy of Northern British Columbia, Canada</p>
       </div>
-    </div>
+    </div>-->
 
    <!--  <div class="unit unit-s-1-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
       <div class="unit-spacer">
       <a href="#Dr. Bernard H. Kueper">Dr. Bernard H. Kueper</a><br>
            <p class="body">Queen’s University, Canada</p>
       </div>
-    </div> -->
+    </div> 
     </div> <!-- End Keynotes -->
 
-  <span class="anchor" id="Dr. Jianbing Li"></span>
+  <!--<span class="anchor" id="Dr. Jianbing Li"></span>
   <div class="keynote-info">
   <p class="bold">Dr. Jianbing Li</p><img src="../img/Li.jpg" width="250" align="right" class="keynote-img">
   <p class="body">Dr. Jianbing Li is a professor and professional engineer (P.Eng.) in the environmental engineering program at the University of Northern British Columbia (UNBC) in Canada. He also holds adjunct professorship at several Chinese universities. He obtained his PhD degree in environmental systems engineering from the University of Regina in 2003. His major research interests include soil and groundwater remediation, environmental pollution control, environmental modeling and risk assessment, and environmental systems analysis. His research has been supported by a number of federal, provincial and municipal funding organizations. He has supervised more than 25 graduate students (PhD and MSc.) and postdoctoral fellows and hosted more than 10 visiting scholars in his laboratory. He has published more than 180 journal and conference papers, with an h-index of 30 and one paper being listed as one of the most cited Journal of Hazardous Materials Articles. He received the UNBC Research Excellence or Achievement Award for three times, as well as the 2013 Northern BC Business and Technology Award. He also received several best paper awards from two international conferences and one international journal. He served as a guest editor for three international journals, and acted as a committee member for many international conferences. He acted as an external examiner for 7 PhD dissertations. He regularly serves as a reviewer for many international journals and conferences as well as a variety of national and international research funding organizations. </p>
@@ -38,7 +38,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
 
   <div class="top"><a href="#top">top</a></div>
   <div class="border"></div>
-  </div>  <!-- End Keynote Info-->
+  </div> --> <!-- End Keynote Info-->
 
 
   
