--- a/past-events.html
+++ b/past-events.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: ICEPR'18 - Past Events
-meta: Information about ICEPR'17
+title: ICEPR'19 - Past Events
+meta: Information about ICEPR'19
 keyword: environment conference, biofuels conference, desalination conference, wastewater conference, pollution conference, remediation conference, environmental engineering conference, environmental pollution conference, environmental remediation conference, environmental treatment conference, air pollution conference, water pollution conference, wasterwater pollution conference, soil pollution conference, environmental protection, environmental sustainability, environmental development, greenhouse, global warming, climate change, groudwater, oil spills, renewable energy, water treatment, soil treatment, wastewater treatment, environment, biofuels, desalination, wastewater, pollution, remediation, environmental engineering, environmental pollution, environmental remediation, environmental treatment, air pollution, water pollution, wasterwater pollution, soil pollution, environmental protection conference, environmental sustainability conference, environmental development conference, greenhouse conference, global warming conference, climate change conference, groudwater conference, oil spills conference, renewable energy conference, water treatment conference, soil treatment conference, wastewater treatment conference
 ---
 
@@ -10,7 +10,9 @@ keyword: environment conference, biofuels conference, desalination conference, w
   <div class="unit-spacer content">
 
   	<h3>Past Events</h3>
-    <span class="anchor" id="top"></span>
+    <p class="body">Information about the last conference in this conference series will be available soon. Thank you for your patience.</p>
+    
+   <!-- <span class="anchor" id="top"></span>
     <p class="body">The previous event in this conference series, ICEPR, was held on June 6 - 8, 2017, in Rome, Italy. ICEPR is one of the 4 conferences that make up the World Congress on New Technologies (NewTech). Our year-long planning and organization of several committees resulted in the conference becoming a major success. Please see below some of the highlights of the event.</p>
     <ul>
         <li><a href="#Awards" class="body-link">Best Paper Award Winners</a></li>
@@ -108,7 +110,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
 
 
     <br><br>
-
+-->
     
   </div>
 </div>
