--- a/registration.html
+++ b/registration.html
@@ -1,18 +1,19 @@
 ---
 layout: default
-title: ICEPR'18 - Registration
+title: ICEPR'19 - Registration
 meta: The registration details and instructions can be found here
 keyword: environment conference, biofuels conference, desalination conference, wastewater conference, pollution conference, remediation conference, environmental engineering conference, environmental pollution conference, environmental remediation conference, environmental treatment conference, air pollution conference, water pollution conference, wasterwater pollution conference, soil pollution conference, environmental protection, environmental sustainability, environmental development, greenhouse, global warming, climate change, groudwater, oil spills, renewable energy, water treatment, soil treatment, wastewater treatment, environment, biofuels, desalination, wastewater, pollution, remediation, environmental engineering, environmental pollution, environmental remediation, environmental treatment, air pollution, water pollution, wasterwater pollution, soil pollution, environmental protection conference, environmental sustainability conference, environmental development conference, greenhouse conference, global warming conference, climate change conference, groudwater conference, oil spills conference, renewable energy conference, water treatment conference, soil treatment conference, wastewater treatment conference
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-    <p class="body">The registration fees for the 8<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'18) are listed below. All prices are in Euros and VAT (Value Added Tax) included:</p>
+    <p class="body">The registration fees for the 9<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'19) are listed below. All prices are in Euros and VAT (Value Added Tax) included:</p>
 
     <div class="mobile">
     <table>
     <tbody><tr>
-        <td class="date-title"><strong>Early Bird Registration<!-- <br>Final Extended Early Bird Registration --></strong><br><!-- <s>Prior to March 1, 2018</s><br> -->Prior to March 16, 2018</td>  
+        <td class="date-title"><strong>Early Bird Registration<!-- <br>Final Extended Early Bird Registration --></strong>
+        <!--<br> <s>Prior to March 1, 2018</s><br> Prior to March 16, 2018--></td>  
     </tr>
     <tr>
     <td class="imp-date"><p class="left">Students*:</p> <p class="right">€450</p></td>   
@@ -22,7 +23,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
     </tr>
 
     <tr>
-    <td class="date-title"><strong>Regular Registration</strong><br><!-- </s><div class="past-text">Final Extended Regular Registration --></div><!-- <s><br>Prior to April 15, 2018</s><br> -->Prior to April 20, 2018</td>
+    <td class="date-title"><strong>Regular Registration</strong><br><!-- </s><div class="past-text">Final Extended Regular Registration </div><!-- <s><br>Prior to April 15, 2018</s><br> Prior to April 20, 2018--></td>
     </tr>
     <tr>
     <td class="imp-date"><p class="left">Students:</p> <p class="right">€550</p></td>
@@ -32,7 +33,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
     </tr>
 
     <tr>
-    <td class="date-title" rowspan="2"><strong>Late Registration</strong><br>After April 20, 2018</td>
+    <td class="date-title" rowspan="2"><strong>Late Registration</strong><!--<br>After April 20, 2018--></td>
     </tr>
     <tr>
     <td class="imp-date"><p class="left">Students:</p> <p class="right">€600</p></td>
@@ -59,7 +60,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
     <div class="desktop">
     <table>
     <tbody><tr>
-    <th class="date-title" rowspan="2"><strong>Early Bird Registration</strong><br><!-- <div class="past-text">Final Extended Early Bird Registration</div> --><div class="past-text"><b>Prior to March 16, 2018</b></div></th>
+    <th class="date-title" rowspan="2"><strong>Early Bird Registration</strong><br><!-- <div class="past-text">Final Extended Early Bird Registration</div> <div class="past-text"><b>Prior to March 16, 2018</b></div>--></th>
     <td class="imp-date"><p class="left">Students*:</p> <p class="right">€450</p></td>
     </tr>
     <tr>
@@ -67,7 +68,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
     </tr>
 
     <tr>
-    <th class="date-title" rowspan="2"><strong>Regular Registration</strong><!-- <div class="past-text">Final Extended Regular Registration</div> --><br><div class="past-text"><b>Prior to April 20, 2018</b></div></th>
+    <th class="date-title" rowspan="2"><strong>Regular Registration</strong><!-- <div class="past-text">Final Extended Regular Registration</div><br><div class="past-text"><b>Prior to April 20, 2018</b></div> --></th>
     <td class="imp-date"><p class="left">Students:</p> <p class="right">€550</p></td>
     </tr>
     <tr>
@@ -75,7 +76,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
     </tr>
 
     <tr>
-    <th class="date-title" rowspan="2"><strong>Late Registration</strong><br><div class="past-text"><b>After April 20, 2018</b></di></th>
+    <th class="date-title" rowspan="2"><strong>Late Registration</strong><!--<br><div class="past-text"><b>After April 20, 2018</b></di>--></th>
     <td class="imp-date"><p class="left">Students:</p> <p class="right">€600</p></td>
     
 </tr>
@@ -114,10 +115,10 @@ keyword: environment conference, biofuels conference, desalination conference, w
 <p class="body"><b>***Important information for workshop registrants:</b> All workshop attendees will receive a certificate of participation. <!-- The registration deadline for the workshop is on May 1, 2018. --> Registration fees will be refunded only if the workshop is cancelled due to insufficient amount of registrants (less than 5).</p>
 
 <p class="body"><b>Important information for registrants who need to apply for VISA:</b><br>
-Please visit <a href="https://www.esmadrid.com/en/visas-madrid" class="body-link">
-EsMadrid</a> for more details.</p>
+Please visit <a href="https://www.mzv.cz/jnp/" class="body-link">
+Ministry of Foreign Affairs of the Czech Republic</a> for more details.</p>
 
-    <p class="body">You may register for ICEPR'18 by one of the methods below. Please click on one of the icons to access the details of each payment method.</p>
+    <p class="body">You may register for ICEPR'19 by one of the methods below. Please click on one of the icons to access the details of each payment method.</p>
 
     <center>          
     <div class="unit unit-s-1 unit-m-1-4 unit-l-1-4">
