--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@ keyword: environment conference, biofuels conference, desalination conference, w
 
       <h2>Keynote Speakers:</h2>
       <center>
-        <div class="unit unit-s-1-1 unit-m-1-2 unit-l-1-2 keynoteIndex">
+        <!-- <div class="unit unit-s-1-1 unit-m-1-2 unit-l-1-2 keynoteIndex">
           <img src="../img/Li.jpg" class="flex-img" alt="Dr. Jianbing Li">
           <p class="body"><b>Dr. Jianbing Li,</b><br>Univeristy of Northern British Columbia, Canada<br><a href="../keynote#Dr. Jianbing Li" class="body-link">Biography & Abstract</a></p>
         <br>
-        </div>
+        </div> -->
 
         <div class="unit unit-s-1-1 unit-m-1-2 unit-l-1-2 keynoteIndex">
           <img src="../img/Trojanowicz.jpg" class="flex-img" alt="Dr. Marek Trojanowicz">
