--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@ keyword: environment conference, biofuels conference, desalination conference, w
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
+  
+  <p class="announcement-text" align="center" style="color:#009C4E"><strong>The conference proceedings of this conference will be indexed by Scopus and Google Scholar.</strong></p>
     <p class="body"><strong>The 9<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'19) aims to become the leading annual conference in fields related to environmental pollution and remediation.</strong> The goal of ICEPR'19 is to gather scholars from all over the world to present advances in the relevant fields and to foster an environment conducive to exchanging ideas and information. This conference will also provide an ideal environment to develop new collaborations and meet experts on the fundamentals, applications, and products of the mentioned fields.</p>
 
     <p class="body"><b>ICEPR</b> is an acronym for <b>I</b>nternational <b>C</b>onference on <b>E</b>nvironmental <b>P</b>ollution and <b>R</b>emediation.</p>
@@ -25,7 +27,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
 
     <p class="body">To learn more about the previous event in this conference series, please visit: <a href="/past-events/" class="body-link">Past Event</a>.</p>
 
-    <!--<br>
+    <br>
     <h2>Paper Topics</h2>
       <p class="body">ICEPR'19 is now accepting papers on the following topics.</p>
       <ul class="topics">
@@ -41,7 +43,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
       <p class="body">For a complete list of the paper topics, please visit: <a href="/papers" class="body-link">Submissions</a>.</p>
 
       <br>
-
+<!--
       <h2>Keynote Speakers:</h2>
         <center>
         <div class="unit unit-s-1-1 unit-m-1-2 unit-l-1-2 keynoteIndex">
